--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,8 @@ button {
     cursor: pointer;
 }
 
-footer {
-    background: #2e2f42;
+address {
+    font-style: normal;
 }
 
 /* Header and footer(only first part logo) */
@@ -27,7 +27,7 @@ footer {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
@@ -62,7 +62,6 @@ footer {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    font-style: normal;
 }
 
 .contacts:focus,
@@ -79,7 +78,7 @@ footer {
 .title-text {
     font-weight: 700;
     font-size: 56px;
-    line-height: 1.07143;
+    line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
@@ -91,13 +90,11 @@ footer {
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #fff;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background: #4d5ae5;
 }
 
 .title-button:focus,
 .title-button:hover {
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background: #404bbf;
 }
 
@@ -125,9 +122,10 @@ footer {
 }
 
 .team-title {
+    text-transform: capitalize;
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.11111;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
@@ -157,9 +155,10 @@ footer {
 /* Portfolio section */
 
 .portfolio-title {
+    text-transform: capitalize;
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.11111;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
@@ -181,6 +180,10 @@ footer {
 }
 
 /* Footer (without logo) */
+
+.main-footer {
+    background: #2e2f42;
+}
 
 .footer-text {
     font-size: 16px;
